Examples/Declarative/Infix.lean
/- # infix

[`ğŸ·ï¸ãƒ¡ã‚¿ãƒ—ãƒ­ã‚°ãƒ©ãƒŸãƒ³ã‚°`](./?search=ğŸ·ãƒ¡ã‚¿ãƒ—ãƒ­ã‚°ãƒ©ãƒŸãƒ³ã‚°)

`infix` ã¯ã€ä¸­ç½®è¨˜æ³•ã‚’å®šç¾©ã™ã‚‹ã‚³ãƒãƒ³ãƒ‰ã§ã™ã€‚
-/
import Lean --#
namespace Infix --#

-- ä¸­ç½®è¨˜æ³•ã‚’å®šç¾©ã€‚ä¸­èº«ã¯ãŸã ã®æ›ã‘ç®—
-- ç‰¹å®šã®åå‰ç©ºé–“ã§ã ã‘æœ‰åŠ¹ã«ã™ã‚‹ãŸã‚ã« `scoped` ã‚’ä»˜ã‘ã¦ã„ã‚‹
scoped infix:60 " â‹„ " => Nat.mul

#guard 2 â‹„ 3 = 6

/- `:` ã®å¾Œã«ä»˜ã‘ã¦ã„ã‚‹æ•°å­—ã¯ãƒ‘ãƒ¼ã‚¹å„ªå…ˆé †ä½ã§ã€é«˜ã„ã»ã©çµåˆã™ã‚‹ã‚¿ã‚¤ãƒŸãƒ³ã‚°ãŒæ—©ããªã‚Šã¾ã™ã€‚ç­‰å· `=` ã®ãƒ‘ãƒ¼ã‚¹å„ªå…ˆé †ä½ã¯ 50 ã§ã‚ã‚‹ã“ã¨ã‚’è¦šãˆã¦ãŠãã¨è‰¯ã„ã‹ã‚‚ã—ã‚Œã¾ã›ã‚“ã€‚-/

-- ç­‰å·ã‚ˆã‚Šå¾®å¦™ã«ãƒ‘ãƒ¼ã‚¹å„ªå…ˆé †ä½ãŒé«˜ã„
scoped infix:51 " strong " => Nat.add

-- ãã¡ã‚“ã¨ 1 + (2 strong 3) = 6 ã¨è§£é‡ˆã•ã‚Œã‚‹ã€‚
-- ã“ã‚Œã¯ã€ ç­‰å·ã®ãƒ‘ãƒ¼ã‚¹å„ªå…ˆé †ä½ãŒ 51 æœªæº€ã§ã‚ã‚‹ã“ã¨ã‚’æ„å‘³ã™ã‚‹
#check 1 + 2 strong 3 = 6

-- ãƒ‘ãƒ¼ã‚¹å„ªå…ˆé †ä½ã‚’ 50 ã‚ˆã‚Šä½ãã™ã‚‹ã¨ç­‰å·ã‚ˆã‚Šä½ããªã‚‹
-- ã—ãŸãŒã£ã¦ã‚¨ãƒ©ãƒ¼ã«ãªã‚‹
scoped infix:49 " weak " => Nat.add

#guard_msgs (drop warning) in --#
#check_failure 1 + 2 weak 3 = 6

/- `infix` ã§å®šç¾©ã•ã‚Œã‚‹è¨˜æ³•ã¯å·¦çµåˆã§ã‚‚å³çµåˆã§ã‚‚ãªãã€å¿…ãšæ‹¬å¼§ãŒå¿…è¦ã§ã™ã€‚-/
section

open Lean Parser

/-- parse ã§ãã‚‹ã‹ã©ã†ã‹ãƒã‚§ãƒƒã‚¯ã™ã‚‹é–¢æ•° -/
def checkParse (cat : Name) (s : String) : MetaM Unit := do
  if let .error s := runParserCategory (â† getEnv) cat s then
    throwError s

-- å˜ã«é€£çµã™ã‚‹ã¨ãƒ‘ãƒ¼ã‚¹ä¸å¯ã§ã‚¨ãƒ©ãƒ¼ã«ãªã‚‹
/-- error: <input>:1:6: expected end of input -/
#guard_msgs in run_meta checkParse `term "1 â‹„ 2 â‹„ 3"

-- æ‹¬å¼§ã‚’ä»˜ã‘ã‚Œã°OK
run_meta checkParse `term "1 â‹„ (2 â‹„ 3)"

end
/- ## èˆå°è£

`infix` ã¯ [`notation`](./Notation.md) ã‚³ãƒãƒ³ãƒ‰ã«å±•é–‹ã•ã‚Œã‚‹ãƒã‚¯ãƒ­ã¨ã—ã¦å®Ÿè£…ã•ã‚Œã¦ã„ã¾ã™ã€‚-/

open Lean

def lxor (l r : Bool) : Bool := !l && r

/-- `#expand` ã®å…¥åŠ›ã«æ¸¡ã™ãŸã‚ã®æ§‹æ–‡ã‚«ãƒ†ã‚´ãƒª -/
declare_syntax_cat macro_stx

-- ã‚³ãƒãƒ³ãƒ‰ã¨ã‚¿ã‚¯ãƒ†ã‚£ã‚¯ã¨é …ã‚’æ‰±ãˆã‚‹
syntax command : macro_stx
syntax tactic : macro_stx
syntax term : macro_stx

/-- ãƒã‚¯ãƒ­ã‚’å±•é–‹ã™ã‚‹ã‚³ãƒãƒ³ãƒ‰ -/
elab "#expand " t:macro_stx : command => do
  let t : Syntax := match t.raw with
  | .node _ _ #[t] => t
  | _ => t.raw
  match â† Elab.liftMacroM <| Lean.Macro.expandMacro? t with
  | none => logInfo m!"Not a macro"
  | some t => logInfo m!"{t}"

/-- info: notation:50 lhsâœ:51 " LXOR " rhsâœ:51 => lxor lhsâœ rhsâœ -/
#guard_msgs in
  #expand infix:50 " LXOR " => lxor

end Infix --#
